# icas

./: .gitignore  README.md
src/: Makefile  prod  pyproject.toml  sandbox
src/source/: ad-status.rst  ads.rst  api-reference.rst  attributes.rst  authentication.rst  bidding-micros.rst  campaign-budgets.rst  campaign-linkedads.rst  campaign-overview.rst  campaign-restrictions.rst  campaign-status.rst  campaign-targeting.rst  campaigns.rst  categories-v1.rst  categories-v2.rst  categories.rst  conf.py  deprecation.rst  feed-details.rst  feeds.rst  index.rst  migration-guide.rst  openapi.html  overview.rst  regions.rst  release-notes.rst  reporting-examples.rst  reporting-query-and-response-v1.rst  reporting-query-and-response.rst  reporting.rst  reporting_v1.rst  reporting_v2.rst  {
src/source/_static/: CampaignStates.xml  custom.css
src/source/diagrams/: CampaignStates.xml  README.txt
src/source/examples/: ad-example.rst  campaign-ad-request.rst  campaign-ad-response.rst  campaign-funnel-object.rst  campaign-request.rst  campaign-response.rst  campaign-targeting.rst  category-example-v1.rst  category-example.rst  category-leaf-v2.json  category-leaf-v5.json  category-nonleaf-v2.json  category-tree-v2.json  delete-campaign-linkedads-list-v1-example.rst  delete-campaign-linkedads-v1-example.rst  delete-campaign-v2-example.rst  feed-example.xml  feed-xml-v-1-0-example.xml  feed-xml-v-1-1-example.xml  get-ad-example-v1.rst  get-ad-example-v2.rst  get-ad-id-funnel-example.rst  get-ad-id-v1-example.rst  get-ad-id-v2-by-vendor.rst  get-ad-id-v2-example.rst  (+121 more)
(+4852 files in other folders)
